objects/copado__User_Story_Commit__c.object
<CustomObject>
    <fields>
        <fullName>copado__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Snapshot_Commit__c</fullName>
        <label>Snapshot Commit</label>
        <referenceTo>copado__Git_Org_Commit__c</referenceTo>
        <relationshipLabel>User Story Commits</relationshipLabel>
        <relationshipName>User_Story_Commits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Commits</relationshipLabel>
        <relationshipName>User_Story_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>